--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
+    "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0"
