--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.73.3",
     "expo": "~52.0.41",
     "expo-file-system": "~18.0.12",
     "expo-intent-launcher": "~12.0.2",
+    "expo-media-library": "~17.0.6",
     "expo-permissions": "^14.4.0",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
@@ -25,8 +28,7 @@
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "expo-media-library": "~17.0.6"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
