--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-blob-util": "^0.21.2",
     "react-native-calendars": "^1.1310.0",
     "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-react-query-devtools": "^1.3.10",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
